Configure project for Vercel deployment
- Add vercel.json for monorepo deployment
- Create api/index.ts serverless function entry point
- Update server.ts for serverless compatibility
- Configure frontend API client for production
- Add postinstall script for Prisma generation
- Create comprehensive deployment documentation

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "prisma:studio": "prisma studio",
     "test:api": "node test-api.js",
     "test:api:full": "node test-api-full.js",
-    "check:server": "node start-server.js"
+    "check:server": "node start-server.js",
+    "postinstall": "prisma generate"
   },
   "keywords": [
     "inventory",
